qt/gen_qtreeview.nim

proc fcQTreeView_override_virtual_verticalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_verticalScrollbarValueChanged".}
proc fQTreeView_virtualbase_scrollContentsBy(self: pointer, dx: cint, dy: cint): void{.importc: "QTreeView_virtualbase_scrollContentsBy".}
proc fcQTreeView_override_virtual_scrollContentsBy(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_scrollContentsBy".}
proc fQTreeView_virtualbase_rowsInserted(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QTreeView_virtualbase_rowsInserted".}
proc fcQTreeView_override_virtual_rowsInserted(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_rowsInserted".}
proc fQTreeView_virtualbase_rowsAboutToBeRemoved(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QTreeView_virtualbase_rowsAboutToBeRemoved".}
proc fcQTreeView_override_virtual_rowsAboutToBeRemoved(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_rowsAboutToBeRemoved".}
proc fQTreeView_virtualbase_moveCursor(self: pointer, cursorAction: cint, modifiers: cint): pointer{.importc: "QTreeView_virtualbase_moveCursor".}
proc fcQTreeView_override_virtual_moveCursor(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_moveCursor".}
proc fQTreeView_virtualbase_horizontalOffset(self: pointer, ): cint{.importc: "QTreeView_virtualbase_horizontalOffset".}
proc fcQTreeView_override_virtual_horizontalOffset(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_horizontalOffset".}
proc fQTreeView_virtualbase_verticalOffset(self: pointer, ): cint{.importc: "QTreeView_virtualbase_verticalOffset".}
proc fcQTreeView_override_virtual_verticalOffset(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_verticalOffset".}
proc fQTreeView_virtualbase_setSelection(self: pointer, rect: pointer, command: cint): void{.importc: "QTreeView_virtualbase_setSelection".}
proc fcQTreeView_override_virtual_setSelection(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_setSelection".}
proc fQTreeView_virtualbase_visualRegionForSelection(self: pointer, selection: pointer): pointer{.importc: "QTreeView_virtualbase_visualRegionForSelection".}
proc fcQTreeView_override_virtual_visualRegionForSelection(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_visualRegionForSelection".}
proc fQTreeView_virtualbase_selectedIndexes(self: pointer, ): struct_miqt_array{.importc: "QTreeView_virtualbase_selectedIndexes".}
proc fcQTreeView_override_virtual_selectedIndexes(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_selectedIndexes".}
proc fQTreeView_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_timerEvent".}
proc fcQTreeView_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_timerEvent".}
proc fQTreeView_virtualbase_paintEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_paintEvent".}
proc fcQTreeView_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_paintEvent".}
proc fQTreeView_virtualbase_drawRow(self: pointer, painter: pointer, options: pointer, index: pointer): void{.importc: "QTreeView_virtualbase_drawRow".}
proc fcQTreeView_override_virtual_drawRow(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_drawRow".}
proc fQTreeView_virtualbase_drawBranches(self: pointer, painter: pointer, rect: pointer, index: pointer): void{.importc: "QTreeView_virtualbase_drawBranches".}
proc fcQTreeView_override_virtual_drawBranches(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_drawBranches".}
proc fQTreeView_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_mousePressEvent".}
proc fcQTreeView_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_mousePressEvent".}
proc fQTreeView_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_mouseReleaseEvent".}
proc fcQTreeView_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_mouseReleaseEvent".}
proc fQTreeView_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_mouseDoubleClickEvent".}
proc fcQTreeView_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_mouseDoubleClickEvent".}
proc fQTreeView_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_mouseMoveEvent".}
proc fcQTreeView_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_mouseMoveEvent".}
proc fQTreeView_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_keyPressEvent".}
proc fcQTreeView_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_keyPressEvent".}
proc fQTreeView_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_dragMoveEvent".}
proc fcQTreeView_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_dragMoveEvent".}
proc fQTreeView_virtualbase_viewportEvent(self: pointer, event: pointer): bool{.importc: "QTreeView_virtualbase_viewportEvent".}
proc fcQTreeView_override_virtual_viewportEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_viewportEvent".}
proc fQTreeView_virtualbase_updateGeometries(self: pointer, ): void{.importc: "QTreeView_virtualbase_updateGeometries".}
proc fcQTreeView_override_virtual_updateGeometries(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_updateGeometries".}
proc fQTreeView_virtualbase_viewportSizeHint(self: pointer, ): pointer{.importc: "QTreeView_virtualbase_viewportSizeHint".}
proc fcQTreeView_override_virtual_viewportSizeHint(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_viewportSizeHint".}
proc fQTreeView_virtualbase_sizeHintForColumn(self: pointer, column: cint): cint{.importc: "QTreeView_virtualbase_sizeHintForColumn".}
proc fcQTreeView_override_virtual_sizeHintForColumn(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_sizeHintForColumn".}
proc fQTreeView_virtualbase_horizontalScrollbarAction(self: pointer, action: cint): void{.importc: "QTreeView_virtualbase_horizontalScrollbarAction".}
proc fcQTreeView_override_virtual_horizontalScrollbarAction(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_horizontalScrollbarAction".}
proc fQTreeView_virtualbase_isIndexHidden(self: pointer, index: pointer): bool{.importc: "QTreeView_virtualbase_isIndexHidden".}
proc fcQTreeView_override_virtual_isIndexHidden(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_isIndexHidden".}
proc fQTreeView_virtualbase_selectionChanged(self: pointer, selected: pointer, deselected: pointer): void{.importc: "QTreeView_virtualbase_selectionChanged".}
proc fcQTreeView_override_virtual_selectionChanged(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_selectionChanged".}
proc fQTreeView_virtualbase_currentChanged(self: pointer, current: pointer, previous: pointer): void{.importc: "QTreeView_virtualbase_currentChanged".}
proc fcQTreeView_override_virtual_currentChanged(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_currentChanged".}
proc fQTreeView_virtualbase_sizeHintForRow(self: pointer, row: cint): cint{.importc: "QTreeView_virtualbase_sizeHintForRow".}
proc fcQTreeView_override_virtual_sizeHintForRow(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_sizeHintForRow".}
proc fQTreeView_virtualbase_inputMethodQuery(self: pointer, query: cint): pointer{.importc: "QTreeView_virtualbase_inputMethodQuery".}
proc fcQTreeView_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_inputMethodQuery".}
proc fQTreeView_virtualbase_updateEditorData(self: pointer, ): void{.importc: "QTreeView_virtualbase_updateEditorData".}
proc fcQTreeView_override_virtual_updateEditorData(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_updateEditorData".}
proc fQTreeView_virtualbase_updateEditorGeometries(self: pointer, ): void{.importc: "QTreeView_virtualbase_updateEditorGeometries".}
proc fcQTreeView_override_virtual_updateEditorGeometries(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_updateEditorGeometries".}
proc fQTreeView_virtualbase_verticalScrollbarAction(self: pointer, action: cint): void{.importc: "QTreeView_virtualbase_verticalScrollbarAction".}
proc fcQTreeView_override_virtual_verticalScrollbarAction(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_verticalScrollbarAction".}
proc fQTreeView_virtualbase_horizontalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QTreeView_virtualbase_horizontalScrollbarValueChanged".}
proc fcQTreeView_override_virtual_horizontalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_horizontalScrollbarValueChanged".}
proc fQTreeView_virtualbase_closeEditor(self: pointer, editor: pointer, hint: cint): void{.importc: "QTreeView_virtualbase_closeEditor".}
proc fcQTreeView_override_virtual_closeEditor(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_closeEditor".}
proc fQTreeView_virtualbase_commitData(self: pointer, editor: pointer): void{.importc: "QTreeView_virtualbase_commitData".}
proc fcQTreeView_override_virtual_commitData(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_commitData".}
proc fQTreeView_virtualbase_editorDestroyed(self: pointer, editor: pointer): void{.importc: "QTreeView_virtualbase_editorDestroyed".}
proc fcQTreeView_override_virtual_editorDestroyed(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_editorDestroyed".}
proc fQTreeView_virtualbase_edit2(self: pointer, index: pointer, trigger: cint, event: pointer): bool{.importc: "QTreeView_virtualbase_edit2".}
proc fcQTreeView_override_virtual_edit2(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_edit2".}
proc fQTreeView_virtualbase_selectionCommand(self: pointer, index: pointer, event: pointer): cint{.importc: "QTreeView_virtualbase_selectionCommand".}
proc fcQTreeView_override_virtual_selectionCommand(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_selectionCommand".}
proc fQTreeView_virtualbase_startDrag(self: pointer, supportedActions: cint): void{.importc: "QTreeView_virtualbase_startDrag".}
proc fcQTreeView_override_virtual_startDrag(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_startDrag".}
proc fQTreeView_virtualbase_viewOptions(self: pointer, ): pointer{.importc: "QTreeView_virtualbase_viewOptions".}
proc fcQTreeView_override_virtual_viewOptions(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_viewOptions".}
proc fQTreeView_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QTreeView_virtualbase_focusNextPrevChild".}
proc fcQTreeView_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_focusNextPrevChild".}
proc fQTreeView_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QTreeView_virtualbase_event".}
proc fcQTreeView_override_virtual_event(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_event".}
proc fQTreeView_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_dragEnterEvent".}
proc fcQTreeView_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_dragEnterEvent".}
proc fQTreeView_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QTreeView_virtualbase_dragLeaveEvent".}
